# Helianthus

./: .gitignore  CMakeLists.txt  README.md  build.ps1  res.qrc  version.h.in
autobuild/: kill_Helianthus.bat  main.ps1  nsis_Helianthus.nsi  svn-update.ps1
res/page/: 75酒精.html  Alcoholic_beverage.html  Bottle.html  C2H4O2.html  C2H6O.html  Corn_oil.html  Empty.html  Olive_oil.html  Salt.html  Sesame_oil.html  Sodium_bicarbonate.html  Starch.html  Sugar.html  Sunflower_oil.html  Tong_sui.html  Washing_powder.html  Water.html  橄榄油.html  水.html  淀粉.html  玉米油.html  碳酸氢钠.html  空.html  空瓶.html  糖.html  糖水.html  芝麻油.html  葵花籽油.html  食盐.html
res/page/75酒精_files/: load.css
res/page/Alcoholic_beverage_files/: load_002.css  m=corsproxy.js  m=navigationui.js  websitetranslationui.html
res/page/Bottle_files/: load_002.css  m=phishing_protection.js  websitetranslationui.html
res/page/C2H4O2_files/: websitetranslationui.html
res/page/C2H4O2_files/websitetranslationui_data/: m=_b,_tp.js
res/page/C2H6O_files/: load_002.css  load_003.css  websitetranslationui.html
res/page/Corn_oil_files/: load.js  load_002.css  websitetranslationui.html
res/page/Olive_oil_files/: websitetranslationui.html
res/page/Salt_files/: css2.css  websitetranslationui.html
res/page/Sesame_oil_files/: websitetranslationui.html
res/page/Sodium_bicarbonate_files/: websitetranslationui.html
res/page/Starch_files/: load_002.css  websitetranslationui.html
res/page/Sugar_files/: load_002.css  websitetranslationui.html
res/page/Sunflower_oil_files/: websitetranslationui.html
res/page/Tong_sui_files/: websitetranslationui.html
res/page/Washing_powder_files/: load.js  load_002.css  m=corsproxy.js  m=navigationui.js  m=phishing_protection.js  websitetranslationui.html
res/page/Washing_powder_files/websitetranslationui_data/: m=_b,_tp.js
res/page/Water_files/: load.css  websitetranslationui.html
res/page/橄榄油_files/: load.js  load_003.css
res/page/水_files/: load_002.css
res/page/淀粉_files/: load.js
res/page/玉米油_files/: css2.css  load.css  load.js  load_002.css  m=corsproxy.js  m=navigationui.js  m=phishing_protection.js  websitetranslationui.html
res/page/玉米油_files/websitetranslationui_data/: m=_b,_tp.js
res/page/碳酸氢钠_files/: load.js  load_003.css
res/page/糖水_files/: load.css
res/page/芝麻油_files/: load.js  load_002.css  load_003.css
res/page/食盐_files/: load.js  load_002.css
res/themes/: OSX_Dark.qss  OSX_Lite.qss
server/: 24bit_classify.ipynb  composition_separation.py  knn_predict.py  my_train.py  train_knn.py  train_regression.py
simulation/: 535.txt  661_24bit.csv  OTO.py  cut_csv.py
src/FormHistory/: formhistory.cpp  formhistory.h  formhistory.ui
src/FormOTO/: formoto.cpp  formoto.h  formoto.ui
src/FormPlot/: formplot.cpp  formplot.h  formplot.ui
src/FormPlot/PlotData/: plotdata.cpp  plotdata.h  plotdata.ui
src/FormPlot/PlotFilter/: plotfilter.cpp  plotfilter.h  plotfilter.ui
src/FormPlot/PlotHistory/: plothistory.cpp  plothistory.h  plothistory.ui
src/FormPlot/PlotPostProcess/: plotpostprocess.cpp  plotpostprocess.h  plotpostprocess.ui
src/FormPlot/PlotSeparation/: plotseparation.cpp  plotseparation.h  plotseparation.ui
src/FormResult/: formresult.cpp  formresult.h  formresult.ui
src/FormResult/ShowClass/: showclass.cpp  showclass.h  showclass.ui
src/FormSelfTrain/: formselftrain.cpp  formselftrain.h  formselftrain.ui
src/FormSerial/: formserial.cpp  formserial.h  formserial.ui
src/FormSerial/SerialData/: serialdata.cpp  serialdata.h  serialdata.ui
src/FormSetting/: formsetting.cpp  formsetting.h  formsetting.ui
src/FormSetting/AutoUpdate/: autoupdate.cpp  autoupdate.h  autoupdate.ui
src/FormSetting/ClassifySetting/: classifysetting.cpp  classifysetting.h  classifysetting.ui
src/FormSetting/SeparationSetting/: separationsetting.cpp  separationsetting.h  separationsetting.ui
src/FormSetting/SerialFrame/: serialframe.cpp  serialframe.h  serialframe.ui
src/FormSetting/TrainSetting/: trainsetting.cpp  trainsetting.h  trainsetting.ui
src/components/MyChartView/: mychartview.cpp  mychartview.h
src/components/MyHttp/: myhttp.cpp  myhttp.cpp.autosave  myhttp.h
src/components/MyLog/: mylog.cpp  mylog.h
src/components/MyProcess/: myprocess.cpp  myprocess.h
src/global/: g_define.h
src/main/: main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui
src/main/FlowPanel/: flowpanel.cpp  flowpanel.h  flowpanel.ui
src/main/ThreadWorker/: threadworker.cpp  threadworker.h
src/tools/Integration/: integration.cpp  integration.h  integration.ui
